# alvessa_agent

./: .gitignore  README.md  chart.xml  check_eval_by_db_labbench.py  claude_client.py  conditioned_claude.py  config.py  demo.json  demo.txt  entity_classes.py  entity_extraction.py  evaluate_alvessaBench.py  evaluate_benchmarks.py  evaluate_benchmarks_general.py  evaluate_compare_perf_by_db_labbench.py  evaluate_entity_extraction.py  evaluate_labBench.py  gene_class.py  graph_builder.py  plot_evaluations.py  practice.ipynb  pyproject.toml  requirements.txt  run.py  scratch.xml  serve_ui.py  state.py  tool_agent_node.py  tool_alphamissense.py  tool_annotate_gencode.py  tool_biogrid.py  tool_biogrid_summarization.py  tool_dbsnp.py  tool_descriptions.py  tool_go_summarization.py  tool_gwas.py  tool_humanbase.py  tool_miRDB.py  tool_prot.py  tool_reactome.py  (+7 more)
benchmarks_generation/: biogrid_questions.py  gencode_questions.py  gwas_questions_easy.py  gwas_variant_questions.py  reactome_questions.py
demo_notes/: demo_note1.txt  demo_tool_selection.txt
deprecated/: requirements.txt
evals/: __init__.py  alvessaBench.py  benchmarks_general.py  compare_perf_by_db_labbench.py  entity_extraction.py  labBench.py
local_dbs/: README.md
scripts/: README.md  alvessa_many_questions.py  benchmark_chatgpt.py  benchmark_claude.py  benchmark_claude_web_search.py  benchmark_config.py  benchmark_utils.py  entity_extraction.py  eval_adversarial.py  plot_adversarial_results.py  plot_genomearena_counts.py  report_entity_extraction_results.py  run_drug_gene_interactions.py  subset_dbQA.py  (+8 more)
(+160 files in other folders)
